I fixed co-op and year text spacing,

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,10 @@ button, select {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 5%;
+    box-sizing: border-box;
+    min-width: 5%;
+    padding: 5px;
+    padding: 5px;
     font-size: 150%;
     font-weight: bold;
     writing-mode: vertical-rl;
@@ -116,7 +119,11 @@ button, select {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 25px;
+    min-height: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
     border: 5px solid SkyBlue;
     border-radius: 5px;
     font-weight: bold;
